--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,10 @@
 {
   "files.associations": {
     "iostream": "cpp",
-    "new": "cpp"
+    "new": "cpp",
+    "list": "cpp",
+    "memory": "cpp",
+    "istream": "cpp",
+    "functional": "cpp"
   }
 }
